# humanoid_vision

./: .gitignore  .pre-commit-config.yaml  README.md  object_detector.pth  pyproject.toml  requirements.txt  setup.cfg  test_model.pth
sample-image-segmentation-pipeline/: Makefile  MySemanticSegmentation - student 9.11.50 PM.ipynb  README.md  config_template.py  example.py  main.py  requirements.txt  test_pipeline.py
src/humanoid_vision/: __init__.py  camera.py  depth.py  inference_pipeline.py  main.py  module.py  pipeline.py  ros_check.py  ros_exporter.py  training_pipeline.py
tests/: conftest.py  inference_pipe_image_test.py  inference_pipe_test.py  test_camera.py  test_imports.py  test_video_inference.py  training_pipe_test.py
