[metadata]
name = humanoid_vision
version = 0.1.0
description = Humanoid vision package

[options]
packages = find:
package_dir =
    = src
install_requires =
    torch==2.9.1
    numpy==2.2.0
    opencv-python==4.12.0.88

[options.extras_require]
dev =
    pytest
    black
    flake8
    pre-commit==4.5.0

[options.packages.find]
where = src
